--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+<!--  sabai kura yesma render huncha that is why react is called single page application(SPA) -->
+
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
